Fix overflow

--- a/mysite/styles.css
+++ b/mysite/styles.css
@@ -238,7 +238,6 @@ body {
         top: 0;
         background-color: deepskyblue;
         padding: 1.5vh 0;
-        margin: 7vh 0 0 0;
         font-size: 3vh;
         box-shadow: 0 4px 5px -7px #000000, 5px 5px 10px 5px rgba(0, 0, 0, 0);
         /*grid-template-columns: 15% 90%;*/
@@ -261,7 +260,7 @@ body {
         flex-wrap: nowrap;
         padding: 0 1vw 2vw 1vw;
         background-color: #888888;
-        /*overflow: hidden;*/
+        overflow: auto;
         /*flex-basis: auto;*/
     }
 
